--- a/src/03应用(基于脚手架)/first_demo/package.json
+++ b/src/03应用(基于脚手架)/first_demo/package.json
@@ -6,18 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.23.5",
+    "antd": "4.8.2",
+    "autoprefixer": "^10.4.12",
     "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.5",
     "customize-cra": "^1.0.0",
-    "less": "3.13.0",
+    "less": "3.12.2",
     "less-loader": "7.1.0",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
