--- a/src/03应用(基于脚手架)/first_demo/package.json
+++ b/src/03应用(基于脚手架)/first_demo/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.0",
+    "redux": "4.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
