--- a/src/03应用(基于脚手架)/first_demo/package.json
+++ b/src/03应用(基于脚手架)/first_demo/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.0",
     "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
